--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  background-color: lightgray;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.wrapper {
+  height: 100%;
+}
+
+html {
+  height: 100%;
+}
+
+
+#root {
+  height: 100%;
+  position: relative;
+}
+
+.content{
+  margin: 0 auto;
+  width: 80%;
+  max-width: 1080px;
+  min-width: 670px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%
+}
+
+.content__main{
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  background-color: white;
+  border-radius: 5px;
 }
