Auth functional added

--- a/src/components/common/FormControls/FormsControl.module.css
+++ b/src/components/common/FormControls/FormsControl.module.css
@@ -1,7 +1,7 @@
 .formControl.error input,
 .formControl.error textarea
 {
-    border: 1px solid red;
+    border-bottom: 2px solid red;
 }
 .formControl.error span {
     color: red;
@@ -17,4 +17,8 @@
 
 textarea{
     width: 100%;
+}
+
+.span{
+    text-align: center;
 }
